--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "html2canvas": "^1.0.0-alpha.12",
     "jspdf": "^1.5.3",
     "ng2-pdf-viewer": "^5.2.3",
+    "ngx-bootstrap": "^3.1.4",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
